# CSF_Segment

./: .gitignore  README.md  pyproject.toml
src/csf_segment/: cropper.py  data_config.py  dataloader.py  inference.py  load_data_paths.py  main.py  model.py
src/csf_segment.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/csf_segment/model_checkpoints/fusion/: fold_0.pt  fold_1.pt  fold_2.pt  fold_3.pt  fold_4.pt  fold_5.pt  fold_6.pt  fold_7.pt  fold_8.pt  fold_9.pt
src/csf_segment/model_checkpoints/static/: fold_0.pt  fold_1.pt  fold_2.pt  fold_3.pt  fold_4.pt  fold_5.pt  fold_6.pt  fold_7.pt  fold_8.pt  fold_9.pt
