[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "csf-segment"
version = "0.1.0"
description = "CSF segmentation tool"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Erin Liu" }]

dependencies = [
  "numpy>=1.20",
  "nibabel>=5.0",
  "matplotlib>=3.5",
  "torch>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "ruff>=0.5",
]

[project.scripts]
csf-segment = "csf_segment.main:cli"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
